fixed https://github.com/joergreichert/RepositoryTargetGenerator/issues/4